--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>UPnP Explorer - UI Mockup</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
