--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>UPnP Explorer - UI Mockup</title>
+  <title>UPnP Explorer</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="favicon.ico">
 </head>
